tests/fail/incompatible_types_jagged_array.tig
let
    type arrayint = array of int
    type jaggedint = array of arrayint
    var arrayint1 := arrayint[5+7] of 1 + (3/2) - (5*7)
    var jaggedint1 := jaggedint[6] of arrayint1
in
    jaggedint1[1][2] := "a"
end
