tests/fail/incompatible_types_jagged_array.err
Semantic Error: Incompatible types in assigment at line 7.
